fix: Update text-disabled colors to pass Lighthouse contrast test

--- a/src/components/DataListing.module.css
+++ b/src/components/DataListing.module.css
@@ -66,7 +66,7 @@
   align-items: center;
   justify-content: center;
   min-height: 180px;
-  color: grey;
+  color: var(--text-disabled);
   font-style: italic;
   text-align: center;
 }
