--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -30,6 +30,7 @@
   --border-light: #fff;
   --border-medium: grey;
   --text-color: #222;
+  --text-disabled: #333;
   --link-color: #00f;
   --selection-bg: navy;
   --selection-text: #fff;
@@ -50,7 +51,7 @@ html.dark {
   --border-light: #4d2a2a;
   --border-medium: #3a2020;
   --text-color: #f5f0f0;
-  --text-disabled: #8a7070;
+  --text-disabled: #B4A7A7;
   --link-color: #ff8080;
   --selection-bg: #6a2a2a;
   --selection-text: #fff;
